@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0



class PlanController {
 +partialUpdate(): ResponseEntity<PlanView>
}



class PlanService {
 +partialUpdate(String planType,EditPlanRequest resource, getVersionFromIfMatchHeader(ifMatchValue)): Plan
}
class ProductServiceImpl{
 +partialUpdate(String planType,EditPlanRequest resource, getVersionFromIfMatchHeader(ifMatchValue)): Plan
}

interface PlanRepository <<interface>> {
 +save(plan): Result
 +findByPlanType(String id): Plan
}


class Plan {
    -nMins
    -maxDevices
    -musicCollections
    -musicSuggestions
    -monthlyFee
    -annualFee
    -planState
    -planType
    -planPromote
    -HTMLdescription
Plan(final String planType, final Integer numMinutes, final Integer maxDevices, final Integer musicCollections,
                        final String musicSuggestions, final Integer monthlyFee, final Integer annualFee,
                        final String htmlDescription)
+applyPatch(desiredVersion, resource.getNumMinutes(), resource.getMaxDevices(), resource.getMusicCollections(), resource.getMusicSuggestions(),
                            resource.getHtmlDescription()): Result
}


PlanRepository "1" --> "0..*" Plan:  records
PlanController ..> PlanService
ProductServiceImpl ..> PlanRepository

ProductServiceImpl ..> Plan
PlanService ..> Plan
ProductServiceImpl .up.|> PlanService

@enduml